--- a/src/app/widget/widget.component.html
+++ b/src/app/widget/widget.component.html
@@ -1,14 +1,2 @@
-<div class="card-deck">
-  <div class="card">
-    <div class="card-body">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">card text</p>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-body">
-      <h4 class="card-title">Another title</h4>
-      <p class="card-text">more text</p>
-    </div>
-  </div>
-</div>
+<h5 #widgetTitle></h5>
+<div #widgetWrap></div>
