--- a/src/app/drag-drop-list/drag-drop-list.component.css
+++ b/src/app/drag-drop-list/drag-drop-list.component.css
@@ -1,5 +1,5 @@
 .example-list {
-  width: 500px;
+  width: 350px;
   max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
@@ -7,10 +7,11 @@
   background: white;
   border-radius: 4px;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .example-box {
-  padding: 20px 10px;
+  padding: 10px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
