--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:center; padding: 20px;">
   <h2>
     Welcome to {{ title }}!
   </h2>
+  <h4><b>Drag-and-drop</b> the components of the list</h4>
 </div>
-
 
 <div style="width: 100%;">
   <app-drag-drop-list></app-drag-drop-list>
